# uv-qdrant-starter

./: .gitignore  README.md  main.py  pyproject.toml  sample.txt
app/: main.py
app/cli/: console.py
app/embedding/: base.py  local.py
app/features/search/: search_api.py  search_schema.py  search_service.py
app/helper/: hash_utils.py
app/ingest/: chunker.py  pipeline.py
app/vectordb/: base.py  qdrant_store.py
