[project]
name = "uv-qdrant-starter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.28.1",
    "python-dotenv>=1.2.1",
    "qdrant-client>=1.16.2",
    "rich>=14.3.2",
    "sentence-transformers>=5.2.2",
    "torch>=2.10.0",
    "typer>=0.23.1",
]
